<resources>
    <string name="search_flights_title">Search Flights</string>
    <string name="personal_title">Personal</string>
    <string name="business_title">Business</string>
    <string name="status_title">Status</string>
    <string name="total_usd_title">Total USD</string>
    <string name="network_fee_title">Network Fee</string>
    <string name="to_title">To</string>
    <string name="close">Close</string>
    <string name="max_label">Max</string>
    <string name="recipient_address">Recipient Address</string>
    <string name="amount">Amount</string>
    <string name="receive_title">Receive</string>
    <string name="deposit_title">Deposit</string>
    <string name="deposit_disclaimer">Only send AERO or EGLD to this wallet address. Sending any other tokens may result in the loss of your deposit.</string>
    <string name="withdraw_title">Withdraw</string>
    <string name="send_title">Send</string>
    <string name="save_title">Save</string>
    <string name="discover_title">Discover</string>
    <string name="first_name_title">First Name</string>
    <string name="country_title">Country</string>
    <string name="category_title">Business Category</string>
    <string name="last_name_title">Last Name</string>
    <string name="phone_number_title">Phone Number</string>
    <string name="email_title">Email</string>
    <string name="business_name_title">Business Name</string>
    <string name="search_tags">Search Tags (comma separated)</string>
    <string name="tags_title">Tags:</string>
    <string name="bio_title">Resume/Bio</string>
    <string name="callsign_title">Aircraft Call Sign</string>
    <string name="username_title">Username</string>
    <string name="set_username">Set a unique username for this account</string>
    <string name="fund_wallet">Fund wallet</string>
    <string name="change_profile">Set profile photo</string>
    <string name="wallet_title">Wallet</string>
    <string name="view_wallet_balance">View balance &amp; send/receive $AERO</string>
    <string name="find_a_flight">Find a flight</string>
    <string name="near_me_title">Near me</string>
    <string name="account_title">Account</string>
    <string name="my_account_title">My Account</string>
    <string name="more_title">More</string>
    <string name="edit_account_title">Edit Account</string>
    <string name="new_account">New Account</string>
    <string name="home_title">Home</string>
    <string name="clear_upper">Clear</string>
    <string name="clear_lower">clear</string>
    <string name="cancel">Cancel</string>
    <string name="back_title">Back</string>
    <string name="discard">Discard</string>
    <string name="completed">Completed</string>
    <string name="incomplete">Incomplete</string>
    <string name="ok">Ok</string>
    <string name="dismiss">Dismiss</string>
    <string name="get_started">Get Started</string>
    <string name="continue_to_app">Continue to app</string>
    <string name="continue_title">Continue</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="import_existing_wallet">Import an existing wallet</string>
    <string name="create_account_title">Create Account</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="settings_title">Settings</string>
    <string name="accepts_aero">Accepts AERO</string>
    <string name="accepts_egld">Accepts EGLD</string>
    <string name="services_title">Services</string>
    <string name="protect_wallet_title">Protect Wallet</string>
    <string name="protect_wallet_desc">Protect your wallet by creating a six digit passcode. This will be used to unlock your Chartr account wallet on this device.</string>
    <string name="protect_wallet_tips_title">Wallet Tips</string>
    <string name="recovery_phrase_title">Recovery Phrase</string>
    <string name="import_wallet_title">Import Wallet</string>
    <string name="enter_recovery_phrase">Please enter your 24 word secret phrase in the correct order</string>
    <string name="verify_words">Enter the following words again in the order specified</string>
    <string name="import_wallet_confirmation">Are you sure you want to proceed?</string>
    <string name="verify_words_title">Verify Words</string>
    <string name="wallet_created_successfully">Wallet created successfully!</string>
    <string name="wallet_imported_successfully">Wallet imported successfully!</string>
    <string name="words_do_not_match">One or more of the words you entered did not match. Verify you entered the correct word for the positions listed.</string>
    <string name="complete_account_setup">Complete account setup</string>
    <string name="protect_wallet_tips_desc">
        Keep your phrase safe
        \n\nYour recovery phrase is the key to your wallet in case you forget your PIN.
        Blockchains do not have a "Reset Password" feature so if you lose your secret phrase you risk losing all your assets and other data associated with this account.
        \n\nDo not share your secret phrase with anyone.  Keep it in a secure place where you can only access it. Chartr does not have access to it so we cannot reset it for you. </string>
    <string name="proceed_to_wallet_words">If you are ready to backup your recovery phrase proceed to the next screen</string>
    <string name="confirm_words_notice">Please make sure you have written the words down in the correct order from 1–24, then press continue.</string>
    <string name="confirm_words_checkbox_text">I verify I have written down my recovery phrase in the correct order from 1–24</string>
    <string name="create_passcode">Create PIN</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="insecure_pin_title">Insecure PIN</string>
    <string name="insecure_pin_desc">Insecure PIN detected, please enter a more secure PIN.</string>
    <string name="pin_no_match">PIN could not be validated please try again.</string>
    <string name="create_wallet_desc">All data associated with your Chartr account is stored securely on the blockchain and linked to your crypto wallet. You can create a new one now, or if you created a Chartr wallet in the past you can import it and retrieve your existing account data.\n\n Maiar wallet import also supported!</string>
    <string name="account_type_title">Account Type</string>
    <string name="choose_account_type">Choose an account type</string>
    <string name="select_account_type_desc">You must select an account type before proceeding. If you are a pilot select Business, otherwise select Personal.</string>
    <string name="enter_call_sign">Enter a call sign for this account so other users can search for you. Only letters, numbers, underscores ("_"), and hyphens ("-") are allowed, must start with 3 letters, and must be 6 characters or longer.</string>
    <string name="send_transaction">Send Transaction</string>
    <string name="test_wallet">erd1ue8u924fsggde2k39npkynve28a4mjlwpa03cf5wjxelnc044x3q3g86uy</string>
    <string name="welcome_title">Welcome to Chartr!</string>
    <string name="built_on_blockchain_title">Built on the Blockchain</string>
    <string name="pay_with_aero_title">Pay with $AERO</string>
    <string name="decentralized_title">Decentralized</string>
    <string name="welcome_desc">The Chartr app will change the way you think when it comes to booking your next flight.</string>
    <string name="built_on_blockchain_desc">All contracts and exchanges will be processed directly on the blockchain, ensuring they are safe and secure.</string>
    <string name="pay_with_aero_desc">Use the native $AERO coin to purchase and collect payments on the Chartr platform.</string>
    <string name="decentralized_desc">The Chartr app is a truly decentralized organization, ran and managed by pilot professionals from around the world.</string>
    <string name="aero_balance_title">AERO Balance</string>
    <string name="egld_balance_title">EGLD Balance</string>
    <string name="send_egld_title">Send EGLD</string>
    <string name="send_aero_title">Send AERO</string>
    <string name="send_aero_desc">Pay for your flight, or send AERO to another wallet.</string>
    <string name="learn_more">Learn more</string>
    <string name="invalid_address">Invalid address</string>
    <string name="confirm_transfer_title">Confirm Transfer</string>
    <string name="confirm_title">Confirm</string>
    <string name="view_transactions_title">View Transactions</string>
    <string name="activity_title">Activity</string>
    <string name="transaction_history_title">Transaction History</string>
    <string name="no_activity_label">No activity yet</string>
    <string name="profile_title">Profile</string>
    <string name="account_processing">Your account is still being processed, check back in a few minutes.</string>
    <string name="overview_title">Overview</string>
    <string name="exit_setup_title">Exit Setup?</string>
    <string name="exit_setup_desc">Are you sure you want to quit wallet setup?</string>
    <string name="exit_screen_message">Are you sure you want to leave?</string>
    <string name="exit_recover_phrase_warning">If you leave you will have to start the recovery phrase process over with a new phrase, are you sure you want to leave?</string>
    <string name="exit_button_title">Exit</string>
    <string name="stay_button_title">Stay</string>
    <string name="request_camera_title">Allow Camera Access</string>
    <string name="request_camera_for_qr">Chartr would like access to your camera in order to scan QR codes. Press OK to proceed or Cancel to keep your current permission settings. </string>
    <string name="request_camera_for_profile">Chartr needs access to your camera in order to take a profile picture. Press OK to proceed or Cancel to keep your current permission settings. </string>
    <string name="request_exteral_storage">Chartr needs access to your files in order to take a profile photo, or to choose an existing photo from your gallery. Press OK to proceed or Cancel to keep your current permission settings. </string>
    <string name="request_location_permissions">Chartr would like access to your location to find charter services near you. </string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="include_amount">Include Amount</string>
    <string name="transaction_failed">An unknown error occurred while sending the transaction.</string>
    <string name="no_balance_message">You have nothing to withdraw</string>
    <string name="network_fee_required_title">Network fee required</string>
    <string name="network_fee_required_message">Verify you have enough EGLD to cover the small network fee for this operation.</string>
    <string name="network_fee_to_create_account">Verify you have enough EGLD to cover the small network fee for saving your account data on the blockchain.</string>
    <string name="username_exists">The username you entered is already in use</string>
    <string name="fund_wallet_message">Fund your wallet with a small amount of $EGLD before proceeding. This is needed to cover the cost of the network fee for creating your Chartr account on the blockchain (~$0.10 USD).</string>
    <string name="create_wallet_before_account">A wallet is required before you can create an account</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="location_disabled_message">Location is disabled on your device</string>
    <string name="cant_change_username">Your username cannot be changed later!</string>
    <string name="cant_change_account_type">Account type cannot be changed later!</string>
    <string name="bio_max_chars">/2000</string>
    <string name="create_account_required_fields_message">Username and Account Type are required</string>
    <string name="aerojet_img_content_desc">Aero Jet Image</string>
    <string name="chain_img_content_desc">Blockchain Image</string>
</resources>