<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="org.aerovek.chartr.ui.wallet.create.CreateWalletViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGutter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGutter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_outline_account_wallet_48"
            app:layout_constraintStart_toEndOf="@id/leftGutter"
            app:layout_constraintEnd_toStartOf="@id/rightGutter"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/BodyTextDark"
            android:paddingTop="48dp"
            android:text="@string/create_wallet_desc"
            app:layout_constraintStart_toEndOf="@id/leftGutter"
            app:layout_constraintEnd_toStartOf="@id/rightGutter"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <TextView
            android:id="@+id/importWalletLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> vm.importWalletClicked()}"
            style="@style/LinkTextAeroBlue"
            android:text="@string/import_existing_wallet"
            app:layout_constraintStart_toEndOf="@id/leftGutter"
            app:layout_constraintEnd_toStartOf="@id/rightGutter"
            app:layout_constraintBottom_toTopOf="@+id/createWalletBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@id/createWalletBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> vm.createWalletClicked()}"
            style="@style/FilledButton"
            android:background="@color/black"
            android:text="@string/create_wallet"
            app:layout_constraintStart_toEndOf="@id/leftGutter"
            app:layout_constraintEnd_toStartOf="@id/rightGutter"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>