<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="org.aerovek.chartr.ui.wallet.protect.ProtectWalletViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGutter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGutter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_screen_lock"
            app:layout_constraintStart_toEndOf="@id/leftGutter"
            app:layout_constraintEnd_toStartOf="@id/rightGutter"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/BodyTextDark"
            android:paddingTop="48dp"
            android:text="@string/protect_wallet_desc"
            app:layout_constraintStart_toEndOf="@id/leftGutter"
            app:layout_constraintEnd_toStartOf="@id/rightGutter"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:elevation="12dp"
            android:onClick="@{() -> viewModel.createPasscodeClicked()}"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toEndOf="@id/leftGutter"
            app:layout_constraintEnd_toStartOf="@id/rightGutter"
            app:layout_constraintTop_toBottomOf="@+id/description">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/createPasscodeText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:paddingTop="16dp"
                    style="@style/BodyTextDark"
                    android:textSize="14sp"
                    android:text="@string/create_passcode"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/passcodeStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    android:textColor="@color/orange"
                    style="@style/BodyTextDark"
                    android:textSize="14sp"
                    android:text="@string/incomplete"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/createPasscodeText"
                    tools:text="Incomplete" />

                <ImageView
                    android:id="@+id/rightChevron"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_chevron_right"
                    app:layout_constraintVertical_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@id/continueBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewModel.continueButtonClicked()}"
            android:enabled="false"
            style="@style/FilledButton"
            android:background="@color/disabledGray"
            android:text="@string/continue_title"
            app:layout_constraintStart_toEndOf="@id/leftGutter"
            app:layout_constraintEnd_toStartOf="@id/rightGutter"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>