<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="org.aerovek.chartr.ui.wallet.protect.ProtectWalletTipsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGutter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGutter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_shield"
            app:layout_constraintStart_toEndOf="@id/leftGutter"
            app:layout_constraintEnd_toStartOf="@id/rightGutter"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            style="@style/BodyTextDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/protect_wallet_tips_desc"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@id/rightGutter"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/leftGutter"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toEndOf="@id/leftGutter"
            app:layout_constraintEnd_toStartOf="@id/rightGutter"
            app:layout_constraintBottom_toTopOf="@+id/continueBtn">

            <ImageView
                android:id="@+id/warningImg"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_warning"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/warningText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                style="@style/HintTextGrey"
                android:text="@string/proceed_to_wallet_words"
                app:layout_constraintStart_toEndOf="@id/warningImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@id/continueBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewModel.continueButtonClicked()}"
            style="@style/FilledButton"
            android:background="@color/black"
            android:text="@string/continue_title"
            app:layout_constraintStart_toEndOf="@id/leftGutter"
            app:layout_constraintEnd_toStartOf="@id/rightGutter"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>